bk_ida/gccida/c1/record_operand_costs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1439:4: error: expected ';' after expression
rtx v8; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1439:5: error: use of undeclared identifier 'v8'
rtx v8; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1444:4: error: expected ';' after expression
rtx ops[16]; // [rsp+100h] [rbp-1A8h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1444:5: error: use of undeclared identifier 'ops'
rtx ops[16]; // [rsp+100h] [rbp-1A8h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1445:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15[2]; // [rsp+180h] [rbp-128h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1448:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1451:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1452:29: error: use of undeclared identifier 'recog_data_0'
n_operands = ( unsigned int)recog_data_0.n_operands; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1453:15: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
memcpy( dest, recog_data_0.constraints, 8 * n_operands); 
              ^~~~~~~~~~~~
              recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1454:9: error: use of undeclared identifier 'ops'
memcpy( ops, recog_data_0.operand_mode, 4 * n_operands); 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1454:14: error: use of undeclared identifier 'recog_data_0'
memcpy( ops, recog_data_0.operand_mode, 4 * n_operands); 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1456:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1463:1: error: use of undeclared identifier 'v8'
v8 = recog_data_0.operand[v5]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1463:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v8 = recog_data_0.operand[v5]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1464:17: error: use of undeclared identifier 'v8'
if ( *( _WORD *)v8 == 63 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1465:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[v5] = v8->fld[0].rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1465:28: error: use of undeclared identifier 'v8'
recog_data_0.operand[v5] = v8->fld[0].rtx; 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1466:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[v5]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/regclass.c:1480:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
while ( v5 < recog_data_0.n_operands ); 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_operand_costs/src/obj/regclass.o] Error 1
